cluster/apps/default/grafana/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: grafana
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/websocket-services: grafana
  name: grafana
  namespace: default
spec:
  rules:
  - host: grafana.j-burg11.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana.j-burg11.dev
    secretName: grafana-tls-prod
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  namespace: default
spec:
  serviceName: "grafana"
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
          - 1000
      containers:
      - env:
        - name: TZ
          value: 'Europe/Oslo'
        - name: GF_SECURITY_ADMIN_PASSWORD
          value: password
        - name: GF_SECURITY_ALLOW_EMBEDDING
          value: 'true'
        - name: GF_SECURITY_COOKIE_SAMESITE
          value: 'lax'
        - name: GF_AUTH_ANONYMOUS_ENABLED
          value: 'true'
        - name: GF_AUTH_ANONYMOUS_ORG_NAME
          value: 'Main Org.'
        - name: GF_AUTH_ANONYMOUS_ORG_ROLE
          value: 'Viewer'
        image: grafana/grafana:latest
        imagePullPolicy: Always
        name: grafana
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-volume-1

        # securityContext:
        #   runAsUser: 472
        # securityContext:
        #   runAsUser: 472
          #privileged: true
          #runAsUser: 472
      volumes:
      - name: grafana-volume-1
        persistentVolumeClaim:
          claimName: grafana-pvc
      # securityContext:
      #   fsGroup: 472
        # runAsUser: 472
        # runAsGroup: 472
      # resources:
      #   limits:
      #     cpu: "1"
      #     memory: 1Gi
      #   requests:
      #     cpu: 200m
      #     memory: 200Mi
